Fixed broken menu issue - should also avoid flickering. #32

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,6 +9,7 @@ html {
     color: $c-black;
     font-size: 16px;
     font-family: 'Karla', sans-serif;
+    overflow-y: overlay;
 
     @media (prefers-color-scheme: dark) {
         background-color: $c-black;
